css/creative.css
/* ... */
a.text-dark:hover, a.text-dark:focus {
  color: #121416 !important;
}

.text-body {
  color: #212529 !important;
}

.text-muted {
  color: #6c757d !important;
}

.text-black-50 {
  color: rgba(0, 0, 0, 0.5) !important;
}

.text-white-50 {
  color: rgba(255, 255, 255, 0.5) !important;
}

.text-hide {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

.text-decoration-none {
  text-decoration: none !important;
}

.text-break {
  word-break: break-word !important;
  overflow-wrap: break-word !important;
}

.text-reset {
  color: inherit !important;
}

.visible {
  visibility: visible !important;
}

.invisible {
  visibility: hidden !important;
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
  }
  a:not(.btn) {
    text-decoration: underline;
  }
  abbr[title]::after {
    content: " (" attr(title) ")";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #adb5bd;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  @page {
    size: a3;
  }
  body {
    min-width: 992px !important;
  }
  .container {
    min-width: 992px !important;
  }
  .navbar {
    display: none;
  }
  .badge {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #dee2e6 !important;
  }
  .table-dark {
    color: inherit;
  }
  .table-dark th,
  .table-dark td,
  .table-dark thead th,
  .table-dark tbody + tbody {
    border-color: #dee2e6;
  }
  .table .thead-dark th {
    color: inherit;
    border-color: #dee2e6;
  }
}

body,
html {
  width: 100%;
  height: 100%;
}

.text-white-75 {
  color: rgba(255, 255, 255, 0.75);
}

hr.divider {
  max-width: 3.25rem;
  border-width: 0.2rem;
  border-color: #f4623a;
}

hr.light {
  border-color: #fff;
}

.btn {
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.btn-xl {
  padding: 1.25rem 2.25rem;
  font-size: 0.85rem;
  font-weight: 700;
  text-transform: uppercase;
  border: none;
  border-radius: 10rem;
}

.page-section {
  padding: 8rem 0;
}

#mainNav {
  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  background-color: #fff;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
}

#mainNav .navbar-brand {
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
  font-weight: 700;
  color: #212529;
}

#mainNav .navbar-nav .nav-item .nav-link {
  color: rgb(0,206,209);
  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
  font-weight: 700;
  font-size: 0.9rem;
  padding: 0.75rem 0;
}

#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
  color: rgb(0,206,209);
}

#mainNav .navbar-nav .nav-item .nav-link.active {
  color: rgb(64,224,208) !important;
}



@media (min-width: 992px) {
  html {
    overflow-x: hidden;
  }
  
  #mainNav {
    -webkit-box-shadow: none;
    box-shadow: none;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgb(0,206,209);
  }
  #mainNav .navbar-brand:hover {
    color: white;
  }
  #mainNav .navbar-nav .nav-item .nav-link {
    color: rgb(64,224,208) !important;
    padding: 0 1rem;
  }
  #mainNav .navbar-nav .nav-item .nav-link:hover {
    color: white !important;
  }
  #mainNav .navbar-nav .nav-item:last-child .nav-link {
    padding-right: 0;
  }
  #mainNav.navbar-scrolled {
    -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #fff;
  }
  #mainNav.navbar-scrolled .navbar-brand {
    color: black;
  }
  #mainNav.navbar-scrolled .navbar-brand:hover {
    color: rgb(0,206,209);
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
    color: black !important;
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
    color: rgb(64,224,208) !important;
  }

  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link.active {
    color: rgb(64,224,208) !important;
  }

  img.img-fluid {
    margin: 40% 0 0 0;
  }
}


@media (min-width: 768px) {
  #mainNav .navbar-nav .nav-item .nav-link {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active:hover {
    color: rgb(0,206,209);
  }

  img.img-fluid {
    margin: 40% 0 0 0;
  }
}


@media (min-width: 576px) {
  #mainNav .navbar-nav .nav-item .nav-link {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active:hover {
    color: rgb(0,206,209);
  }

  img.img-fluid {
    margin: 40% 0 0 0;
  }
}

@media (min-width: 384px) {
  #mainNav .navbar-nav .nav-item .nav-link {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active:hover {
    color: rgb(0,206,209);
  }

  img.img-fluid {
    margin: 40% 0 0 0;
  }
}

@media (min-width: 192px) {
  #mainNav .navbar-nav .nav-item .nav-link {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active {
    color: black;
  }

  #mainNav .navbar-nav .nav-item .nav-link.active:hover {
    color: rgb(0,206,209);
  }

  img.img-fluid {
    margin: 40% 0 0 0;
  }
}
/* ... */

